# nautilus_trader

./: .gitignore  .gitmodules  BLUEPRINT-HyperPhysics pBit Hyperbolic Lattice Physics Engine.md  CHECKLIST.md  CLAUDE.md  CLAUDE.md.bak  Cargo.toml  DELIVERABLES.md  EXECUTION_SUMMARY.md  HOMEOSTASIS_CODE_SUMMARY.md  HOMEOSTASIS_IMPLEMENTATION.md  HOMEOSTASIS_INDEX.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_REPORT.md  KNOWN_ISSUES.md  PHASE2_README.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  QUICK_START_DYNAMICS.md  README.md  RESUME_GUIDE.md  ROADMAP.md  ROADMAP_ADDENDUM_2025-11-14.md  SECURITY_AUDIT_DEC_2025.md  STATUS.md  SYSTEMS_DYNAMICS_ARCHITECTURE.md  SYSTEMS_DYNAMICS_INDEX.md  agency-chat.md  hyperphysics-similarity-README.md  pbit-lsh-cortical-bus-blueprint.md  rust-toolchain.toml
crates/active-inference-agent/: Cargo.toml
crates/active-inference-agent/benches/: markov_kernel.rs
crates/active-inference-agent/examples/: markovian_learning_agent.rs
crates/active-inference-agent/src/: gpu_accelerated.rs  gpu_markov.rs  hyperphysics_integration.rs  lib.rs  markov_kernel.rs  pbit_substrate.rs  qualia.rs  temporal.rs  (+1 more)
crates/ats-core/: Cargo.toml  NANOSECOND_VALIDATION_GUIDE.md  SCORES_MODULE_README.md  SECURITY_FIXES_SUMMARY.md  integration_test_report.json  standalone_ml_demo.rs
crates/autopoiesis/: ARCHITECTURE_OPTIMIZATION_REPORT.md  BUILD_PERFORMANCE_ANALYSIS.md  COMPREHENSIVE_CQGS_VALIDATION_REPORT.md  COMPREHENSIVE_SECURITY_AUDIT_REPORT.md  CQGS_ANALYSIS_REPORT.md  Cargo.toml  Cargo.toml.new  FASTRAND_INVESTIGATION_REPORT.md  FINAL_REMEDIATION_SUCCESS_SUMMARY.md  FINAL_SECURITY_AUDIT_COMPLETION.md  JWT_SECURITY_GUIDE.md  MATHEMATICAL_VALIDATION_FRAMEWORK_SUMMARY.md  MOCK_REMOVAL_SUMMARY.md  PERFECT_COMPLETION_CERTIFICATION.md  PLATINUM_CQGS_CERTIFICATION_REPORT.md  POST_CLEANUP_CQGS_REPORT.md  QUICK_BUILD_GUIDE.md  REMEDIATION_PLAN.md  ROOT_CAUSE_ANALYSIS.md  SCIENTIFIC_COMPUTATION_VALIDATION_REPORT.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_VULNERABILITY_REPORT.md  TEST_INFRASTRUCTURE_REPORT.md  VALIDATION_REPORT.md  WORKSPACE_MIGRATION_REPORT.md  analyze_dependencies.py  autopoiesis-rust-blueprint.md  fix_compilation.py  fix_workspace_deps.py  restructure_workspace.py  run_tests.sh  run_tests_enhanced.sh  rustfmt.toml  tarpaulin.toml  validate_restructuring.py  validation_results.json  workspace_analysis.json
crates/bio-inspired-workspace/: Cargo.toml
crates/cdfa-advanced-detectors/: Cargo.toml
crates/cdfa-algorithms/: Cargo.toml
crates/cdfa-antifragility-analyzer/: Cargo.toml
crates/cdfa-black-swan-detector/: Cargo.toml
crates/cdfa-core/: Cargo.toml
crates/cdfa-examples/: Cargo.toml
crates/cdfa-fibonacci-analyzer/: Cargo.toml
crates/cdfa-fibonacci-pattern-detector/: Cargo.toml
crates/cdfa-ml/: Cargo.toml
crates/cdfa-torchscript-fusion/: Cargo.toml
crates/cdfa-unified/: CDFA_COMPREHENSIVE_INVENTORY_REPORT.md  COMPREHENSIVE_TDD_VALIDATION_REPORT.md  CRITICAL_ISSUES_ANALYSIS.md  Cargo.toml  Dockerfile  FINAL_COVERAGE_VALIDATION_REPORT.md  FINAL_FORENSIC_ASSESSMENT.md  FINAL_INTEGRATION_VALIDATION_REPORT.md  FINANCIAL_SAFETY_AUDIT_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  KAHAN_CODE_DEMO.rs  KAHAN_IMPLEMENTATION_SUMMARY.md  MIGRATION_ROADMAP.md  NUMERICAL_STABILITY_VALIDATION_COMPLETE.md  PRECISION_VALIDATION_RESULTS.md  README.md  README_BLACK_SWAN.md  README_FFI.md  REFACTORING_IMPLEMENTATION_PLAN.md  URGENT_FIX_CHECKLIST.md  USAGE.md  build.rs  panarchy_demo  python_cdfa_analysis_report.md  run_validation.sh  stdp_standalone  validation_test_standalone  validation_test_standalone.rs
crates/ceflann-elm/: Cargo.toml
crates/cerebellar-norse/: .pre-commit-config.yaml  ACCURATE_GAP_ANALYSIS_REPORT.md  Cargo.toml  DEPENDENCY_TRACKING_MATRIX.md  ENTERPRISE_COORDINATION_STATUS.md  ENTERPRISE_PROGRAM_TIMELINE.md  IMPLEMENTATION_PLAN.md  MARKET_MICROSTRUCTURE_REPORT.md  NEURAL_ARCHITECTURE.md  PERFORMANCE_REPORT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  RISK_IMPLEMENTATION_SUMMARY.md  RISK_MANAGEMENT_GUIDE.md  RISK_TRACKING_SYSTEM.md  SECURITY_REPORT.md  ZERO_MOCK_AUDIT_REPORT.md  ZERO_MOCK_ENFORCEMENT_SUMMARY.md
crates/cqgs-mcp-plugin/: Cargo.toml  test_mcp_tools.ts
crates/cwts-core/: Cargo.toml
crates/cwts-intelligence/: Cargo.toml
crates/cwts-ultra/: ACTUAL_TRADE_ANALYSIS.md  BAYESIAN_VAR_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_SCIENTIFIC_INTEGRATION_PLAN.md  COMPREHENSIVE_SECURITY_AUDIT_REPORT.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  EMERGENT_ARCHITECTURE_GENESIS_COMPLETE.md  FINAL_COMPLIANCE_REPORT.md  FINAL_VALIDATION_REPORT.md  FREQTRADE_INTEGRATION.md  ICEBERG_ORDERS_COMPLETED.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_COMPLETE.md  INTEGRATION_PLAN_COMPLETION_REPORT.md  MISSION_ACCOMPLISHED.md  PORT_CONFIGURATION.md  PROFITABILITY_ANALYSIS.md  PROFITABILITY_SUMMARY.md  QUANTUM_DEPENDENCIES_FOUND.md  QUANTUM_STRATEGY_ANALYSIS.md  QUANTUM_TO_PARASITIC_INTEGRATION.md  QUICK_FIX_INSTRUCTIONS.md  README.md  SECURITY_ANALYSIS_INDEX.md  SECURITY_AUDIT_SUMMARY.txt  SEC_RULE_15C3_5_IMPLEMENTATION.md  TEST_EXECUTION_SUMMARY.md  TRADING_LOSS_ANALYSIS.md  UNSAFE_CODE_ELIMINATION_REPORT.md  WARNINGS_RESOLUTION.md  ZERO_RISK_SECURITY_VALIDATION_REPORT.md  biomimetic-trading-system-architecture.md  build.rs  build.sh  cargo_warnings.txt  cwts-complete-system.md  cwts-ultra-enhanced-blueprint.md  cwts-validation-rubric.md  parasitic-momentum-blueprint.md  (+6 more)
crates/game-theory-engine/: Cargo.toml
crates/gpu-marl/: Cargo.toml
crates/hedge-algorithms/: Cargo.toml  README.md
crates/hive-mind-rust/: Cargo.toml  Dockerfile  PRODUCTION_DEPLOYMENT_SUMMARY.md  README.md  TESTING.md  TEST_EXECUTION_SUMMARY.md  docker-compose.yml  tarpaulin.toml
crates/holographic-embeddings/: Cargo.toml
crates/hyper-risk-engine/: BUILD_STATUS.md  Cargo.toml  check_build.py  libmod.rlib  test_build.sh
crates/hyperphysics-agency/: Cargo.toml  SYSTEMS_DYNAMICS.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_gillespie.rs  fuzz_lattice.rs  fuzz_metropolis.rs
(+5194 files in other folders)
