[workspace]
members = [
    "crates/hyperphysics-core",
    "crates/hyperphysics-geometry",
    "crates/hyperphysics-pbit",
    "crates/hyperphysics-thermo",
    "crates/hyperphysics-consciousness",
    "crates/hyperphysics-syntergic",
    # "crates/hyperphysics-dilithium",  # Temporarily disabled - dependency fixes needed
    "crates/hyperphysics-market",
    "crates/hyperphysics-risk",
    "crates/hyperphysics-verify",
    "crates/hyperphysics-gpu",
    "crates/hyperphysics-scaling",
    "crates/hyperphysics-viz",
    "crates/hyperphysics-dilithium",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
authors = ["HyperPhysics Team"]
repository = "https://github.com/hyperphysics/hyperphysics"

[package]
name = "hyperphysics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Core HyperPhysics modules
hyperphysics-core = { path = "crates/hyperphysics-core" }
hyperphysics-geometry = { path = "crates/hyperphysics-geometry" }
hyperphysics-pbit = { path = "crates/hyperphysics-pbit" }
hyperphysics-thermo = { path = "crates/hyperphysics-thermo" }
hyperphysics-consciousness = { path = "crates/hyperphysics-consciousness" }

# Enterprise verification and scaling
# hyperphysics-verification = { path = "crates/hyperphysics-verification" }  # Temporarily disabled - compilation errors
hyperphysics-scaling = { path = "crates/hyperphysics-scaling" }
hyperphysics-market = { path = "crates/hyperphysics-market" }
hyperphysics-risk = { path = "crates/hyperphysics-risk" }

# For examples
rand.workspace = true
rand_chacha.workspace = true
chrono.workspace = true

[features]
default = ["simd"]

# Performance backends
simd = []                    # Portable SIMD optimizations (AVX2/NEON)
gpu = ["wgpu", "bytemuck", "pollster"]  # GPU acceleration (deferred to Phase 4)

# Development features
profiling = []

[dependencies.wgpu]
version = "0.20"
optional = true

[dependencies.bytemuck]
version = "1.14"
features = ["derive"]
optional = true

[dependencies.pollster]
version = "0.3"
optional = true

[profile.release]
opt-level = 2
lto = false
codegen-units = 16
strip = false
panic = "unwind"

[profile.release.package."*"]
opt-level = 2

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "message_passing"
harness = false

[workspace.dependencies]
# Mathematical libraries
ndarray = { version = "0.15", features = ["rayon", "serde"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
num-traits = "0.2"
num-complex = "0.4"
approx = "0.5"

# Parallelism
rayon = "1.8"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Benchmarking
criterion = "0.5"

# Testing
proptest = "1.4"
