[workspace]
members = [
    "crates/hyperphysics-core",
    "crates/hyperphysics-geometry",
    "crates/hyperphysics-pbit",
    "crates/hyperphysics-thermo",
    "crates/hyperphysics-consciousness",
    "crates/hyperphysics-syntergic",
    # "crates/hyperphysics-dilithium",  # Temporarily disabled - dependency fixes needed
    "crates/hyperphysics-market",
    "crates/hyperphysics-risk",
    "crates/hyperphysics-verify",
    "crates/hyperphysics-verification",
    "crates/hyperphysics-gpu",
    "crates/hyperphysics-scaling",
    "crates/hyperphysics-viz",
    "crates/hyperphysics-dilithium",
    "crates/hyperphysics-homomorphic",
    "crates/hyperphysics-finance",
    "crates/hyperphysics-hft-ecosystem",
    "crates/physics-engines/rapier-hyperphysics",
    "crates/physics-engines/jolt-hyperphysics",
    # Hyper-Future Architecture (Phase 5)
    "crates/physics-engines/warp-hyperphysics",
    # Unified physics engine abstraction layer
    "crates/physics-engines/hyperphysics-unified",
    "crates/active-inference-agent",
    "crates/holographic-embeddings",
    "crates/gpu-marl",
    "crates/ising-optimizer",
    # NAPI zero-overhead Node.js bindings
    "crates/hyperphysics-napi",
    # Modular hierarchical reasoning router
    "crates/hyperphysics-reasoning-router",
    # Backend adapters for reasoning router
    "crates/hyperphysics-reasoning-backends",
    # Central neural intelligence layer
    "crates/hyperphysics-neural",
    # Enterprise bio-inspired optimization algorithms
    "crates/hyperphysics-optimization",
    # Unified GPU orchestration layer
    "crates/hyperphysics-gpu-unified",
    # Nautilus Trader integration bridge
    "crates/hyperphysics-nautilus",
    # Neural Trader integration bridge
    "crates/hyperphysics-neural-trader",
    # Similarity search components
    "crates/hyperphysics-hnsw",
    "crates/hyperphysics-lsh",
    "crates/hyperphysics-similarity",
    # Enterprise risk engine
    "crates/hyper-risk-engine",
    # Game theory and behavioral economics
    "crates/game-theory-engine",
    "crates/lmsr",
    "crates/prospect-theory",
    # Adaptive Temperature Scaling conformal prediction
    "crates/ats-core",
    # Quantum circuit simulation
    "crates/quantum-circuit",
    # Native AgentDB integration
    "crates/hyperphysics-agentdb",
    # Ultra-low-latency cortical bus with HAL
    "crates/hyperphysics-cortical-bus",
    # Benchmark orchestrator for unified test/benchmark execution
    "crates/hyperphysics-bench-orchestrator",
    # Lorentz/Hyperboloid model with SIMD Minkowski operations
    "crates/hyperphysics-lorentz",
    # pBit-aware Mixture of Experts strategy router
    "crates/hyperphysics-strategy-router",
    # Sibernetic: C. elegans simulation (OpenWorm port)
    "crates/hyperphysics-sph",
    "crates/hyperphysics-connectome",
    "crates/hyperphysics-embodiment",
    "crates/hyperphysics-stdp",
    "crates/hyperphysics-nas",
    "crates/hyperphysics-sentinel",
    "crates/sibernetic-hyperphysics",
    # Autopoiesis-HyperPhysics integration bridge
    "crates/hyperphysics-autopoiesis",
    # Tengri-HyperPhysics trading integration bridge
    "crates/hyperphysics-tengri-bridge",
    # Post-quantum secure MCP authentication layer
    "crates/hyperphysics-mcp-auth",
]
# Exclude legacy/external crates not part of core workspace
exclude = [
    "crates/cwts-ultra",
    "crates/tengri",
    "crates/bio-inspired-workspace",
    # Autopoiesis has its own workspace - exclude to avoid conflict
    "crates/autopoiesis",
    # Quantum-LSTM requires quantum-core which doesn't exist - needs review
    "crates/quantum-lstm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
authors = ["HyperPhysics Team"]
repository = "https://github.com/hyperphysics/hyperphysics"

[workspace.lints.rust]
# Enforce code quality standards
unsafe_code = "warn"
missing_docs = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[workspace.lints.clippy]
# Clippy lints for code quality - set group priorities lower than individual lints
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
# Security-focused lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[package]
name = "hyperphysics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Core HyperPhysics modules
hyperphysics-core = { path = "crates/hyperphysics-core", default-features = false }
hyperphysics-geometry = { path = "crates/hyperphysics-geometry" }
hyperphysics-pbit = { path = "crates/hyperphysics-pbit" }
hyperphysics-thermo = { path = "crates/hyperphysics-thermo" }
hyperphysics-consciousness = { path = "crates/hyperphysics-consciousness" }

# Enterprise verification and scaling
# hyperphysics-verification = { path = "crates/hyperphysics-verification" }  # Temporarily disabled - compilation errors
# hyperphysics-scaling = { path = "crates/hyperphysics-scaling" }
hyperphysics-market = { path = "crates/hyperphysics-market" }
hyperphysics-risk = { path = "crates/hyperphysics-risk" }
hyperphysics-finance = { path = "crates/hyperphysics-finance" }

[dev-dependencies]
criterion = { workspace = true }
# Test dependencies for workspace-level integration tests
ndarray = { workspace = true }
approx = { workspace = true }
ed25519-dalek = "2.1"
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]

# For examples
rand.workspace = true
rand_chacha.workspace = true
chrono.workspace = true

[features]
default = ["simd"]

# Performance backends
simd = []                    # Portable SIMD optimizations (AVX2/NEON)
gpu = ["wgpu", "bytemuck", "pollster"]  # GPU acceleration (deferred to Phase 4)

# Development features
profiling = []

[dependencies.wgpu]
version = "0.20"
optional = true

[dependencies.bytemuck]
version = "1.14"
features = ["derive"]
optional = true

[dependencies.pollster]
version = "0.3"
optional = true

[profile.release]
opt-level = 2
lto = false
codegen-units = 16
strip = false
panic = "unwind"

[profile.release.package."*"]
opt-level = 2

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "message_passing"
harness = false

[workspace.dependencies]
# Mathematical libraries
ndarray = { version = "0.15", features = ["rayon", "serde"] }
nalgebra = { version = "0.34", features = ["serde-serialize", "rayon"] }
num-traits = "0.2"
num-complex = "0.4"
approx = "0.5"

# Parallelism
rayon = "1.8"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
log = "0.4"

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"

# Statistics
statrs = "0.16"

# Benchmarking
criterion = "0.5"

# Testing
proptest = "1.4"

# Vector database (ruvector)
ruvector-core = { path = "crates/vendor/ruvector/crates/ruvector-core", default-features = false, features = ["simd"] }
hnsw_rs = "0.3"
simsimd = "5.9"

# Serialization (binary) - v2.0 for ruvector compatibility
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

# Concurrent data structures
crossbeam = "0.8"

# Iteration utilities
itertools = "0.12"

# Storage and persistence (for ruvector)
memmap2 = "0.9"
redb = "2.2"
rkyv = { version = "0.8", features = ["bytecheck"] }
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4", "serde"] }
mockall = "0.13"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Sibernetic SPH dependencies
glam = "0.29"
smallvec = "1.13"
hashbrown = "0.15"
wide = "0.7"
wgpu = "0.20"
bytemuck = { version = "1.14", features = ["derive"] }

# Sibernetic crate paths
hyperphysics-sph = { path = "crates/hyperphysics-sph", default-features = false }
hyperphysics-connectome = { path = "crates/hyperphysics-connectome", default-features = false }
hyperphysics-embodiment = { path = "crates/hyperphysics-embodiment", default-features = false }
hyperphysics-stdp = { path = "crates/hyperphysics-stdp", default-features = false }
hyperphysics-nas = { path = "crates/hyperphysics-nas", default-features = false }
hyperphysics-sentinel = { path = "crates/hyperphysics-sentinel", default-features = false }
