[package]
name = "active-inference-agent"
version = "0.1.0"
edition = "2021"
description = "Active Inference agents implementing the Free Energy Principle for HyperPhysics"

[dependencies]
nalgebra = { workspace = true }
statrs = "0.16" # Statistical distributions
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
approx = "0.5"
