[package]
name = "active-inference-agent"
version = "0.1.0"
edition = "2021"
description = "Active Inference agents implementing the Free Energy Principle for HyperPhysics"
keywords = ["active-inference", "consciousness", "free-energy", "pbRTCA", "hoffman"]
categories = ["science", "simulation", "algorithms"]

[features]
default = []
full = ["gpu", "verification", "crypto", "action-routing"]
gpu = ["hyperphysics-gpu-unified"]
verification = ["hyperphysics-verify"]
crypto = ["hyperphysics-homomorphic", "hyperphysics-dilithium"]
# pBit-aware MoE action routing for intelligent action selection
action-routing = ["hyperphysics-strategy-router"]
# Lorentz model for hyperbolic belief state representations
lorentz = ["hyperphysics-lorentz", "hyperphysics-geometry/lorentz"]
# Full hyperbolic action system
hyperbolic-action = ["action-routing", "lorentz"]

[dependencies]
nalgebra = { workspace = true }
statrs = "0.16" # Statistical distributions
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
rand = "0.8"
rand_distr = "0.4"

# HyperPhysics core integrations
hyperphysics-geometry = { path = "../hyperphysics-geometry" }
hyperphysics-pbit = { path = "../hyperphysics-pbit" }
hyperphysics-thermo = { path = "../hyperphysics-thermo" }
hyperphysics-consciousness = { path = "../hyperphysics-consciousness" }
hyperphysics-syntergic = { path = "../hyperphysics-syntergic" }

# Lorentz/Hyperboloid model for hyperbolic belief representations (optional)
hyperphysics-lorentz = { path = "../hyperphysics-lorentz", optional = true }

# pBit-aware MoE strategy router for action selection (optional)
hyperphysics-strategy-router = { path = "../hyperphysics-strategy-router", optional = true }

# Optimization and reasoning
hyperphysics-optimization = { path = "../hyperphysics-optimization" }
hyperphysics-reasoning-router = { path = "../hyperphysics-reasoning-router" }
# Note: Disable default features to avoid pulling in hyperphysics-unified (physics feature)
hyperphysics-reasoning-backends = { path = "../hyperphysics-reasoning-backends", default-features = false, features = ["optimization", "statistical"] }

# Neural and GPU (optional)
hyperphysics-neural = { path = "../hyperphysics-neural", optional = true }
hyperphysics-gpu-unified = { path = "../hyperphysics-gpu-unified", optional = true }
gpu-marl = { path = "../gpu-marl", optional = true }

# Security (optional)
hyperphysics-verify = { path = "../hyperphysics-verify", optional = true }
hyperphysics-homomorphic = { path = "../hyperphysics-homomorphic", optional = true }
hyperphysics-dilithium = { path = "../hyperphysics-dilithium", optional = true }

[dev-dependencies]
approx = "0.5"
rand_chacha = "0.3"
criterion = { workspace = true }
nalgebra = { workspace = true }

# Benchmarks
[[bench]]
name = "markov_kernel"
harness = false
