[package]
name = "ats-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["TENGRI Trading Swarm <swarm@tengri.ai>"]
description = "Ultra-High Performance ATS-CP Mathematical Kernels"
repository = "https://github.com/tengri/ats-cp-trader"
license = "MIT OR Apache-2.0"
keywords = ["adaptive-temperature-scaling", "conformal-prediction", "simd", "high-performance", "trading"]
categories = ["science", "algorithms", "mathematics"]


[dependencies]
# Core mathematical dependencies
nalgebra.workspace = true
ndarray = { version = "0.15", features = ["serde"] }
num-traits = "0.2"
num-complex = "0.4"
statrs = "0.16"

# High-performance computing
rayon = { version = "1.8", optional = true }
wide = { version = "0.7", optional = true }  # SIMD operations

# Memory management and alignment
# aligned-vec = "0.5"  # Using internal implementation
memmap2 = "0.9"
libc = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
bytemuck = { version = "1.14", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time and profiling
instant = "0.1"

# Async support
futures = "0.3"
tokio = { version = "1.0", features = ["sync", "time", "fs", "macros", "rt-multi-thread"], optional = true }

# WebSocket and HTTP server dependencies
axum = { version = "0.7", optional = true }
hyper = { version = "1.0", optional = true }
tower = { version = "0.4", features = ["limit"], optional = true }
tower-http = { version = "0.6.6", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", optional = true }

# Authentication and security
jsonwebtoken = { version = "9.0", optional = true }
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }
sha2 = { version = "0.10", optional = true }

# Serialization formats
bincode = { version = "1.3", optional = true }
rmp-serde = { version = "1.1", optional = true }

# ML and Neural Network dependencies
async-trait = { version = "0.1", optional = true }
rand = { version = "0.8", optional = true }
rand_distr = { version = "0.4", optional = true }
regex = { version = "1.10", optional = true }
tracing = { version = "0.1", optional = true }

# WASM FFI support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }  
web-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Compression and serialization
flate2 = { version = "1.0", optional = true }

# ruv-FANN integration
# ruv-fann = { path = "../../ruv_FANN", features = ["simd", "gpu", "parallel"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"
rand = "0.8"
rand_distr = "0.4"
tempfile = "3.8"

[features]
default = ["simd", "parallel", "real-time", "api-server", "neural", "tracing"]
simd = ["wide"]
parallel = ["rayon", "nalgebra/rayon", "ndarray/rayon"]
real-time = ["tokio"]
gpu = []
benchmarking = []
ffi = ["wasm-bindgen", "js-sys", "web-sys", "bincode", "uuid"]
neural = ["async-trait", "rand", "rand_distr", "flate2"]
minimal-ml = ["rand"]
optimized = ["simd", "parallel", "rand"]
ruv-fann = ["neural", "ffi", "gpu"]
tracing = ["dep:tracing"]
api-server = [
    "tokio", "axum", "hyper", "tower", "tower-http",
    "tokio-tungstenite", "futures-util", "jsonwebtoken",
    "uuid", "bincode", "rmp-serde", "regex", "sha2"
]

[lib]
crate-type = ["cdylib", "rlib"]


[[bench]]
name = "ats_core_benchmarks"
harness = false
required-features = ["benchmarking"]

[[bench]]
name = "nanosecond_precision_benchmarks"
harness = false
required-features = ["benchmarking"]

[[bench]]
name = "optimized_conformal_benchmarks"
harness = false
required-features = ["benchmarking"]

[[bin]]
name = "performance_comparison_report"
path = "benches/performance_comparison_report.rs"
required-features = ["benchmarking"]