[workspace]
resolver = "2"
members = [
    "dynamic-swarm-selector",
    "ant-colony",
    "particle-swarm",
    "genetic-algorithm",
    "differential-evolution",
    "grey-wolf",
    "whale-optimization",
    "bat-algorithm",
    "firefly-algorithm",
    "cuckoo-search",
    "artificial-bee-colony",
    "bacterial-foraging",
    "social-spider",
    "moth-flame",
    "salp-swarm",
    "market-regime-detector",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"
authors = ["TENGRI Trading Swarm <swarm@tengri.ai>"]
description = "Bio-inspired optimization algorithms for dynamic trading strategies"

[workspace.dependencies]
# Basic dependencies
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
async-trait = "0.1"
futures = "0.3"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
nalgebra = { version = "0.34", features = ["serde-serialize", "rayon"] }
ndarray = { version = "0.15", features = ["rayon", "serde"] }
num-traits = "0.2"
num-complex = "0.4"
statrs = "0.16"
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6.1"