[package]

name = "cdfa-antifragility-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["CDFA Team <cdfa@trading.ai>"]
description = "High-performance Rust implementation of Taleb's Antifragility concept with sub-microsecond analysis"
license = "MIT"
homepage = "https://github.com/cdfa/antifragility-analyzer"
repository = "https://github.com/cdfa/antifragility-analyzer"
keywords = ["antifragility", "volatility", "taleb", "trading", "finance"]
categories = ["mathematics", "algorithms", "finance"]

# Standalone crate
[workspace]

[dependencies]
# Core numerical computing
ndarray = { version = "0.15", features = ["serde"] }
nalgebra = "0.32"
num-traits = "0.2"
num-complex = "0.4"

# SIMD optimization
wide = { version = "0.7", optional = true }
simba = { version = "0.8", optional = true }

# Random number generation
rand = "0.8"

# Statistical and mathematical functions
statrs = "0.16"
special = "0.10"
smartcore = "0.3"
peroxide = "0.37"

# Parallel processing (required - used throughout crate)
rayon = "1.7"
crossbeam = { version = "0.8", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

# Memory management and optimization
slab = "0.4"
smallvec = "1.11"
arrayvec = "0.7"
tinyvec = "1.6"

# Hardware acceleration
accelerate-src = { version = "0.3", optional = true }
intel-mkl-src = { version = "0.8", optional = true }
openblas-src = { version = "0.10", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and diagnostics
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time and caching
instant = "0.1"
lru = { version = "0.12", optional = true }
dashmap = { version = "5.5", optional = true }

# Optional Python bindings
pyo3 = { version = "0.25.1", features = ["extension-module"], optional = true }
numpy = { version = "0.25", optional = true }

# Optional C FFI
libc = { version = "0.2", optional = true }

# Benchmarking
criterion = { version = "0.5", optional = true }

# Testing utilities
approx = "0.5"
proptest = { version = "1.3", optional = true }
quickcheck = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.3"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
default = ["simd", "parallel", "cache"]

# Core features
simd = ["dep:wide", "dep:simba"]
parallel = ["dep:crossbeam", "dep:crossbeam-channel"]  # rayon is now always included
cache = ["dep:lru", "dep:dashmap"]

# Hardware acceleration
mkl = ["intel-mkl-src"]
openblas = ["openblas-src"]
accelerate = ["accelerate-src"]

# Language bindings
python = ["pyo3", "numpy"]
c-bindings = ["libc"]

# Development features
benchmarks = ["criterion"]
full-tests = ["proptest", "quickcheck"]

[lib]
name = "cdfa_antifragility_analyzer"
crate-type = ["lib", "cdylib"]

[[bench]]
name = "antifragility_benchmarks"
harness = false
required-features = ["benchmarks"]

# [[bench]]
# name = "volatility_benchmarks"
# harness = false
# required-features = ["benchmarks"]

# [[bench]]
# name = "simd_benchmarks"
# harness = false
# required-features = ["benchmarks", "simd"]

[[example]]
name = "basic_analysis"
required-features = ["default"]

# [[example]]
# name = "real_time_analysis"
# required-features = ["default", "parallel"]

# [[example]]
# name = "python_integration"
# required-features = ["python"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3
debug = true

[profile.dev]
opt-level = 1
debug = true