[package]

name = "cdfa-core"
version = "0.1.0"
edition = "2021"
authors = ["CDFA Development Team"]
description = "Core CDFA algorithms: diversity metrics and fusion methods"
license = "MIT"

# Standalone crate
[workspace]

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
itertools = { version = "0.12", optional = true }
rayon = { version = "1.8", optional = true }
num-traits = "0.2"
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[features]
default = ["combinatorial"]
# Enable SIMD optimizations (requires nightly)
simd = []
# Enable serde serialization
serde = ["dep:serde", "ndarray/serde"]
# Enable no_std support
no_std = []
# Enable parallel processing
parallel = ["ndarray/rayon", "dep:rayon"]
# Enable combinatorial fusion analysis
combinatorial = ["dep:itertools"]

[[bench]]
name = "diversity_benchmarks"
harness = false

[[bench]]
name = "fusion_benchmarks"
harness = false